# Unknown

./: CMakeLists.txt  LICENSE  MEMO.md  README.md
appbase/: CMakeLists.txt  application.cpp  file.cpp  graphics.cpp  input.cpp  scancode.rb  scancodename.h  scancodename.hpp  sound.cpp
appbase/include/: application.hpp  exceptions.hpp  file.hpp  graphics.hpp  input.hpp  safeptr.hpp  sound.hpp
basetest/: CMakeLists.txt  testmain.cpp
basetest/res/: test.txt
gamebase/: CMakeLists.txt
gamebase/include/: application.hpp
testapp/: CMakeLists.txt  testmain.cpp
testapp/res/: multiline.txt
testapp/res/sound/: LICENCE.txt
